# testing

./: CMakeLists.txt  README.md
benchmark/: results.json  run_eval.cpp  tasks.json
docs/: architecture_notes.md
skills/: code_executor.md  error_recovery.md  task_planner.md
src/agent/: agent_loop.cpp  agent_loop.h  loop_detector.cpp  loop_detector.h  skill_loader.cpp  skill_loader.h
src/client/: llm_client.h  ollama_client.cpp  ollama_client.h
src/harness/: environment.h  evaluator.h  functional_evaluator.cpp  harness_runner.cpp  harness_runner.h  keyword_evaluator.cpp  native_environment.cpp  sandbox_environment.cpp  task.h  trajectory.cpp  trajectory.h
src/tools/: calculator_tool.cpp  exec_tool.cpp  file_tool.cpp  memory_tool.cpp  tool.h  tool_registry.cpp  tool_registry.h  web_search_tool.cpp
tests/: test_calculator.cpp  test_keyword_evaluator.cpp  test_loop_detector.cpp  test_tool_registry.cpp  test_trajectory.cpp
